clang/test/BSC/Negative/Ownership/RuleCheck/generic_with_owned_args2/generic_with_owned_args2.cbs
// RUN: %clang_cc1 -verify %s

owned T Func_1<T>(T t) // expected-error {{type of 'T' cannot be qualified by 'owned'}}
{
    T owned tmp = (owned T)t; // expected-error {{type of 'T' cannot be qualified by 'owned'}}
    return tmp;
}

void consume_owned(int* owned p) {
    int* p2 = (int*)p;
    return;
}

void test() {
    int a = 10;
    int* owned p1 = Func_1<int*>(&a);
    consume_owned(p1);
    return;
}


void test2() {
    int a = 10;
    int* owned p1 = Func_1<int* owned>((int* owned)&a);
    consume_owned(p1);
    return;
}

typedef int* owned ownedIntPtr;

void test3() {
    int a = 10;
    int* owned p1 = Func_1<ownedIntPtr>((int* owned)&a);
    consume_owned(p1);
    return;
}

int main() {
    test();
    test2();
    test3();
    return 0;
}